# customer_segmentation

./: EDA + Customer Segmentation.ipynb  README.md  pyproject.toml
